<resources>
    <string name="app_name">Inventory</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tvLogin">Login</string>
    <string name="cbRecuerdame">Recuérdame</string>
    <string name="btnSignUp">Registrarse</string>
    <string name="tvOtherLogin">Iniciar sesión con otras plataformas</string>
    <string name="login_tiledt_userHint">Nombre de usuario</string>
    <string name="login_tiledt_passwordHint">Contraseña</string>
    <string name="txtRegistro">Registro</string>
    <string name="textEdtUser">Nombre de usuario</string>
    <string name="textEdtPassword">Contraseña</string>
    <string name="textEdtMail">Correo electrónico</string>
    <string name="btnEnviar">Enviar</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="strDependecy">Dependecy</string>
    <string name="strSector">Sector</string>
    <string name="strProduct">Product</string>
    <string name="strSettings">Settings</string>
    <string name="strAbout">About us</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtFechaCreacion">Fecha Creaccion</string>
    <string name="txtFechaActivacion">Fecha de Activacion</string>
    <string name="txtFechaFin">Fecha Fin</string>
    <string name="txtModificarInventario">Modificar Inventario</string>
    <string name="tctOk">Ok</string>
    <string name="action_search">Search</string>
    <string name="order_dependency">Ordenar dependencias</string>
    <string name="emailEmptyError">El email no puede ser vacio</string>
    <string name="passwordEmptyError">La contraseña no puede estar vacia</string>
    <string name="passwordError">La contraseña no cumple los requisitos</string>
    <string name="emailError">El correo electronico no es válido.</string>
    <string name="passwordMatchError">Las Contraseñas no coincidenn</string>
    <string name="userEmptyError">El usuario no puede ser vacio.</string>
    <string name="strNombre">Nombre</string>
    <string name="strNombreCorto">Nombre corto</string>
    <string name="strDescripcion">Descripcion</string>
    <string name="strImagen">Imagen</string>
    <string name="strEditarDependencia">Editar Dependencia</string>
    <string name="strAddDependencia">Añadir Dependencia</string>
    <string name="strOrdenarPorDescripcion">Ordenar segun la descripcion</string>
    <string name="strUndo">Deshacer</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Descargar imagenes automaticamente</string>
    <string name="attachment_summary_on">Descargar imagenes de las dependencias automaticamente</string>
    <string name="attachment_summary_off">Descargar imagenes de las dependencias de forma manual</string>
    <string name="dependency_header">Dependency</string>
    <string name="dependency_title">Sincronizar dependencias periodicamente</string>
    <string name="title_account">Cuenta</string>
    <string name="summary_account">Privavidad, seguridad...</string>
    <string name="help_header">Ayuda</string>
    <string name="key_account">key_account</string>
    <string name="help_point">Centro de ayuda</string>
    <string name="privacy_conditions">Condiciones y privacidad</string>
    <string name="notifications_header">Notificaciones</string>
    <string name="summary_notification">Activa las notificaciones de todos los objetos</string>
    <string name="notification_key">notification_key</string>
    <string name="title_notification">Activar notificaciones</string>
    <string name="title_ringtone">Tono de las notificaciones</string>
    <string name="summary_ringtone">Tono con el que sonaran las notificaciones de la app</string>
    <string name="ringtone_key">ringtone_key</string>
    <string name="strErrorLoading">Error al cargar la lista</string>
    <string name="strErrorDeleting">Error eliminando.</string>
    <string name="strErrorUndoing">Error deshaciendo la accion.</string>
    <string name="strEditarSection">Editar Sección</string>
    <string name="strAddSection">Nueva sección</string>
    <string name="strAddFailure">Error al añadir</string>
    <string name="strEditarSectionSuccess">Seccion editada con exito</string>
    <string name="strEditFailure">Error al editar</string>
    <string name="strAddSectionSuccess">Seccion añadida!</string>
    <string name="strNullValue">El campo no puede ser nulo</string>
    <string name="strBadLength">El campo debe tener minimo 3 caracteres</string>
    <string name="strDependecyNull">Cada seccion debe estar en una dependencia</string>
</resources>