<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment"
    android:stretchColumns="0,1"
    android:gravity="center"
    android:padding="@dimen/activity_vertical_margin"
    >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/imgBtnInventory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_inventory_dashboard"
            android:contentDescription="@string/app_name"/>

        <ImageButton
            android:id="@+id/imgBtnDependency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dependency"
            android:contentDescription="@string/strDependecy"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <View android:layout_height="@dimen/fdashboard_view_height"
            android:layout_width="match_parent"
            android:layout_span="2"></View>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageButton
            android:id="@+id/imgBtnSector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sector"
            android:contentDescription="@string/strSector"
            />

        <ImageButton
            android:id="@+id/imgBtnProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_products"
            android:contentDescription="@string/strProduct"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <View android:layout_height="@dimen/fdashboard_view_height"
            android:layout_width="match_parent"
            android:layout_span="2"></View>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageButton
            android:id="@+id/imgBtnSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_settings"
            android:contentDescription="@string/strSettings"
            />

        <ImageButton
            android:id="@+id/imgBtnAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_about"
            android:contentDescription="@string/strAbout"
            />
    </TableRow>
</TableLayout>