<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/tvTitleLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvLogin"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/login_tvLogin_textSize"
        android:fontFamily="@font/rich_eatin"
        android:textColor="@color/dark"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        >
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUser"
        style="@style/HintTextAppearance"
        app:errorEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiledtUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_tiledt_userHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/HintTextAppearance"
        app:errorEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiledtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_tiledt_passwordHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/cbRemenber"
            android:buttonTint="@color/light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbRecuerdame"
            android:layout_weight="50">
        </CheckBox>
        <Button
            android:id="@+id/btnSignUp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSignUp"
            android:layout_weight="50"
            >
        </Button>
    </LinearLayout>

    <Button
        android:id="@+id/btnSignIn"
        android:backgroundTint="@color/light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:text="@string/action_sign_in" />

    <TextView
        android:id="@+id/tvOtherLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvOtherLogin"
        android:layout_weight="50"
        android:gravity="bottom"
        >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/imgbtnGoogleSign"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_google"
            android:layout_weight="50"
            >
        </ImageButton>
        <ImageButton
            android:id="@+id/imgbtnFacebookSign"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_facebook"
            android:layout_weight="50"
            >
        </ImageButton>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone" />

</LinearLayout>