<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clAddInventory"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.inventory.AddInventoryFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/frgAddInventory_glStart_begin" />

    <TextView
        android:id="@+id/tvCreado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/txtFechaCreacion"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvActivado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/txtFechaActivacion"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/tvCreado" />

    <TextView
        android:id="@+id/tvFin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/txtFechaFin"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/tvActivado" />

    <TextView
        android:id="@+id/tvEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/txtModificarInventario"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/tvFin" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEditar" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/tvBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="tvCreado,tvActivado,tvFin,tvEditar"
        tools:layout_editor_absoluteX="250dp" />

    <EditText
        android:id="@+id/etFechaCreacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        android:lines="1"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@id/tvCreado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvBarrier"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etFechaActivo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        android:lines="1"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@id/tvActivado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvBarrier"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etFechaFin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        android:lines="1"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@id/tvFin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvBarrier"
        tools:ignore="SpeakableTextPresentCheck" />

    <Switch
        android:id="@+id/swEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@id/tvEditar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toEndOf="@id/tvBarrier" />

</androidx.constraintlayout.widget.ConstraintLayout>