<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.section.SectionManageFragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivSection"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/ic_sector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNombreSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivSection">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiledtNombreSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/strNombre" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNombreCortoSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilNombreSection">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiledtNombreCortoSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/strNombreCorto" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescripcionSection"
        android:layout_width="0dp"
        android:layout_height="@dimen/tilMultilineHeight"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilNombreCortoSection">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiledtDescripcionSection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/strDescripcion"
            android:inputType="textMultiLine"
            android:lines="5"
            android:gravity="top|left"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spDependencias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:tooltipText="Dependencia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilDescripcionSection" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabManageSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="@dimen/fab_margin"
            android:clickable="true"
            android:src="@android:drawable/ic_input_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spDependencias" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>